# device-monitor

./: .gitignore  AGENTS.md  Cargo.toml  KMSCON_TUI_ADAPTATION.md  README.md  build.sh  device-monitor-launcher.sh  ecosystem.config.js  package-lock.json  package.json  setup-mihomo-subscription.sh  setup-permissions.sh  setup-tui-utf8.sh  start.sh  test_vibrate  test_vibrate.rs
device-monitor-web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
device-monitor-web/src/: App.tsx  index.css  types.ts
device-monitor-web/src/api/: index.ts
device-monitor-web/src/components/: AlertsCard.tsx  BatteryCard.tsx  CoreBars.tsx  CpuCard.tsx  DiskCard.tsx  FileManager.tsx  FilePreviewModal.tsx  GpuMonitorCard.tsx  HardwareControl.tsx  HistoryChart.tsx  MarkdownPreview.tsx  MemoryCard.tsx  MetricsBar.tsx  MonitorDetailRow.tsx  NetworkCard.tsx  PathAddressBar.tsx  ProcessManager.tsx  ReportsPanel.tsx  Sparkline.tsx  StatusBar.tsx  (+8 more)
src/: main.rs
src/alert/: mod.rs
src/api/: alerts.rs  archive.rs  battery.rs  cpu.rs  database.rs  disk.rs  files.rs  hardware.rs  history.rs  logs.rs  memory.rs  mihomo.rs  mod.rs  network.rs  process.rs  system.rs  thermal.rs
src/collector/: battery.rs  cpu.rs  disk.rs  hardware.rs  memory.rs  mihomo.rs  mod.rs  network.rs  process.rs  thermal.rs
src/store/: mod.rs  sqlite.rs
src/tui/: mod.rs
src/ws/: mod.rs  terminal.rs
static/: index.html
static/assets/: index-B0mpDDSE.js  index-CRFaP_ek.css  index-CWWXqj5z.js  index-CX2WBg3H.css  index-CbOC2WtW.js  index-CeSR689S.css  index-Du2WZfv7.css  index-TyllULMz.js
(+5 files in other folders)
