[package]
name = "device-monitor-server"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sysinfo = "0.39"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
libc = "0.2.186"
ratatui = "0.30"
crossterm = "0.29"

[[bin]]
name = "device-monitor-server"
path = "src/main.rs"
